# MecchaCamouflage

./: .gitignore  BRANDING.md  CMakeLists.txt  CONTRIBUTING.md  DEBUG.md  Directory.Build.props  LICENSE.txt  Makefile  PLAN.md  PR.md  PR_KR.md  README.md  Releases v1.6.3-o7.md  Releases_KR v1.6.3-o7.md  SECURITY.md  benchmark_analysis_v1.6.3_o7.md  package-lock.json
.github/workflows/: ci.yml  release.yml
cppmods/MecchaCamouflage/: CMakeLists.txt
cppmods/MecchaCamouflage/include/MecchaCamouflage/core/: paint_core.hpp
cppmods/MecchaCamouflage/include/MecchaCamouflage/diagnostics/: artifact_writer.hpp  status_writer.hpp
cppmods/MecchaCamouflage/src/: dllmain.cpp
cppmods/MecchaCamouflage/src/core/: paint_core.cpp
cppmods/MecchaCamouflage/src/diagnostics/: artifact_writer.cpp  status_writer.cpp
cppmods/MecchaCamouflage/tests/: core_tests.cpp
docs/: release-checklist.md  release-precheck-v1.6.0-beta.3.md  repository-layout.md  research-tools.md  runtime-bridge-map.md  runtime-dead-code-candidates.md  runtime-direct-bridge.md  runtime-maintenance.md  runtime-paint-replication-research.md  runtime-paint-replication-validation.md
docs/research/: mesh-direct-bake.md  toolchain.md
resources/mesh-profiles/: paintman_cube.image-profile-v2.json  paintman_cube.mesh-profile-v2.json
runtime/src/: bridge.cpp  controller.cpp  controller_settings.cpp  controller_settings.hpp  controller_ui.cpp  controller_ui.hpp  injector.cpp
scripts/: build.ps1  build_dev.ps1  dev.ps1  mesh.ps1  migrate-image-reference-profiles.ps1  refresh-image-reference-profile.ps1  release.ps1  start.ps1  test_runtime_route.ps1  ue4ss-mapping-dump-mods.txt  ue4ss-mapping-dump.lua
(+62 files in other folders)
